<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ECRM Teacher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_change_pass">Update Password</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="checkingConnection">Đang kiểm tra kết nối…</string>
    <string name="noConnection">Không thể kết nối tới máy chủ!</string>
    <string name="tryAgain">Kiểm tra</string>
    <string name="tabClassroom">CLASSROOM</string>
    <string name="tabAccount">ACCOUNT</string>
    <string name="no_class">You are not teaching is any class!</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_create_report">Tạo Báo Cáo</string>
    <string name="no_report_found">Không tìm thấy báo cáo nào!</string>
    <string name="highlight_image">Highlight Image</string>
    <string name="action_send_report">Send Report</string>
    <string name="suggest">Đề xuất của bạn:</string>
    <string name="description">Đánh giá của bạn</string>
    <string name="prompt_description">Nhập mô tả chi tiết</string>
    <string name="press_back_to_cancel">Nhấn nút Back để quay lại </string>
    <string name="alert">Thông báo</string>
    <string name="cancel">Hủy</string>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor set it</string>
    <string name="action_about">About</string>
    <string name="action_ok">Gửi</string>
    <string name="sendreport_title">Bạn có muốn đổi phòng không?</string>
    <string name="license">
        Copyright 2015 chenupt
        \n\n
        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.
    </string>


</resources>
