<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" tools:context=".ChangePassword"
              android:background="@color/background"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

    <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="ECRM STAFF"
                android:id="@+id/textView2"
                android:textSize="30dp"
                android:textColor="#ffffffff" />


    </LinearLayout>


    <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">
        <ProgressBar android:id="@+id/change_pass" style="?android:attr/progressBarStyleLarge"
                     android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:visibility="gone" />
        <ScrollView android:id="@+id/change_password_form" android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical">

                <LinearLayout android:id="@+id/change_password" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:orientation="vertical">


                    <EditText android:id="@+id/current_password" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:hint="@string/current_password"
                              android:imeActionLabel="@string/action_change_pass"
                              android:imeOptions="actionUnspecified" android:inputType="textPassword"
                              android:maxLines="1" android:singleLine="true"
                              android:layout_marginBottom="10dp"
                              android:textColorHint="#ffffffff"
                              android:textColor="#ffffffff" />

                    <EditText android:id="@+id/new_password" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:hint="@string/new_password"
                              android:imeActionLabel="@string/action_change_pass"
                              android:imeOptions="actionUnspecified" android:inputType="textPassword"
                              android:maxLines="1" android:singleLine="true"
                              android:layout_marginBottom="10dp"
                              android:textColorHint="#ffffffff"
                              android:textColor="#ffffffff" />

                    <EditText android:id="@+id/confirm_password" android:layout_width="match_parent"
                              android:layout_height="wrap_content" android:hint="@string/confirm_password"
                              android:imeActionLabel="@string/action_change_pass"
                              android:imeOptions="actionUnspecified" android:inputType="textPassword"
                              android:maxLines="1" android:singleLine="true"
                              android:layout_marginBottom="10dp"
                              android:textColorHint="#ffffffff"
                              android:textColor="#ffffffff" />




                    <Button android:id="@+id/change_password_button" style="?android:textAppearanceSmall"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" android:text="@string/action_change_pass"
                            android:textStyle="bold"
                            android:textColor="#ffffffff"
                            android:background="#ff7e51c2" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>